# brick-lamp

firmware/: Cargo.toml  README.md  Ravedude.toml
firmware/src/: inverted_pwm.rs  main.rs  potentiometer.rs
pcb/: .gitignore  brick_lamp.kicad_pcb  brick_lamp.kicad_pro  brick_lamp.kicad_sch
