[package]
name = "brick-lamp-firmware"
version = "0.1.0"
authors = ["goodhoko <goodhoko@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "brick-lamp-firmware"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
attiny-hal = { git = "https://github.com/Rahix/avr-hal/", features = ["attiny85"] }
# We need arduino-hal for the `entry` attribute to define our `main` function.
# The trinket (luckily) uses the attiny85 MCU so it should hopefully work.
arduino-hal = { git = "https://github.com/Rahix/avr-hal/", features = ["trinket"]}

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
